# kavun

./: .gitignore  CMakeLists.txt  Doxyfile.in  break.bl  output
lib/: CMakeLists.txt  input-output.cpp
src/: AST.cpp  AST.hpp  AST.txt  CMakeLists.txt  code_generator.cpp  code_generator.hpp  lexer.cpp  lexer.hpp  main.cpp  parser.cpp  parser.hpp
tests/: CMakeLists.txt  array_types.kvn  assignment.kvn  bool.kvn  break-continue.kvn  circle.kvn  codegen_fail_different_types.kvn  codegen_fail_function_as_var.kvn  codegen_fail_not_all_codepaths_return.kvn  codegen_fail_unknown_function.kvn  codegen_fail_void_parameter.kvn  conditional.kvn  double_literal.kvn  extern_test.kvn  factorial.kvn  fibonacci.kvn  fizzbuzz.kvn  for_loop.kvn  hello_world.kvn  id_func.kvn  if_assignment.kvn  if_terminator.kvn  input.kvn  int_return.kvn  lexer_fail_2_points.kvn  lexer_fail_inv_char.kvn  lexer_fail_no_end_string.kvn  lexer_pass1.kvn  many_args.kvn  no_ret_void.kvn  only_main.kvn  optional_return_type.kvn  parser_fail_assignment.kvn  parser_fail_expression.kvn  parser_fail_no_comma_fn.kvn  pointer-arithmetics.kvn  precedence.kvn  rand.kvn  ret_main.kvn  simple_cond.kvn  (+8 more)
